fix button size on mobile version

--- a/src/style.css
+++ b/src/style.css
@@ -38,13 +38,13 @@ h2 {
 }
 
 .divTitles {
+  text-align: center;
   font-size: 1.5rem;
   font-weight: 900;
 }
 
 .scoresDiv {
   padding: 2rem;
-  width: 50%;
 }
 
 .recentScores {
@@ -59,6 +59,7 @@ h2 {
   color: black;
   transition: 0.4s;
   cursor: pointer;
+  width: 70%;
 }
 
 #scoresContainer div {
@@ -113,7 +114,7 @@ h2 {
 }
 
 form {
-  align-items: end;
+  align-items: center;
 }
 
 #submitBtn {
@@ -124,6 +125,7 @@ form {
   color: black;
   transition: 0.4s;
   cursor: pointer;
+  width: 70%;
 }
 
 #submitBtn:hover,
@@ -166,5 +168,26 @@ form {
 
   #scoreSection {
     flex-direction: row;
+  }
+
+  form {
+  align-items: end;
+  }
+
+  #submitBtn {
+    width: auto;
+  }
+
+  .recentScores {
+    flex-direction: row;
+  }
+
+  .scoresDiv {
+    padding: 2rem;
+    width: 50%;
+  }
+
+  #refreshBtn {
+    width: auto;
   }
 }
